--- a/wegame.nctu.me/index.html
+++ b/wegame.nctu.me/index.html
@@ -138,7 +138,7 @@
                                     <p class="mb-0">Programmer, Game Designer</p>
                                 </span>
                             </span>
-                            <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
+                            <img class="img-fluid" src="img/peng.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -149,7 +149,7 @@
                                     <p class="mb-0">Programmer, Game Designer, Music Composer</p>
                                 </span>
                             </span>
-                            <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+                            <img class="img-fluid" src="img/yungchu.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -160,7 +160,7 @@
                                     <p class="mb-0">Programmer, Game Designer</p>
                                 </span>
                             </span>
-                            <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+                            <img class="img-fluid" src="img/jia.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -171,7 +171,7 @@
                                     <p class="mb-0">Programmer, Game Designer</p>
                                 </span>
                             </span>
-                            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+                            <img class="img-fluid" src="img/may.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -182,7 +182,7 @@
                                     <p class="mb-0">Programmer, Game Designer</p>
                                 </span>
                             </span>
-                            <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+                            <img class="img-fluid" src="img/michael.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -193,7 +193,7 @@
                                     <p class="mb-0">Artist, 3D Modeler</p>
                                 </span>
                             </span>
-                            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+                            <img class="img-fluid" src="img/ryan.jpg" alt="">
                         </a>
                     </div>
                 </div>
