--- a/pete-the-penguin.com/index.html
+++ b/pete-the-penguin.com/index.html
@@ -56,10 +56,24 @@
                 <h3 class="mb-5">
                     <em>Coming Soon...</em>
                 </h3>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Learn More</a>
+                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#trailer">Learn More</a>
             </div>
             <div class="overlay"></div>
         </header>
+
+        <!-- Trailer -->
+        <section class="content-section bg-primary text-white" id="trailer">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col-lg-10 mx-auto">
+                            <h2>Trailer</h2>
+                            <p class="lead mb-5">Coming Soon...
+                            </p>
+                            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#about">About</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         <!-- About -->
         <section class="content-section bg-light" id="about">
@@ -67,8 +81,12 @@
                 <div class="row">
                     <div class="col-lg-10 mx-auto">
                         <h2>About</h2>
-                        <p class="lead mb-5">We are a team of 6 members who loves video game development. We are working on our very first project called "Pete the Penguin".</p>
-                        <a class="btn btn-dark btn-xl js-scroll-trigger" href="#game">Game</a>
+                        <p class="lead mb-5">Pete the Penguin is a first-person survival/action game for PC with additional VR mode available.
+                                The game takes place in Antarctica in the year 3000, where World War IV has just ended. The entirety of the world has been decimated by the war.
+                                The only land on Earth suitable for living now is Antarctica, which holds out a small colony of survived scientists and native penguins.
+                                Playing the role of Pete the penguin, the player must fight against the enemies created from the war and hold his ground against all odds.
+                        </p>
+                        <a class="btn btn-dark btn-xl js-scroll-trigger" href="#game">Feature</a>
                     </div>
                 </div>
             </div>
@@ -78,7 +96,7 @@
         <section class="content-section bg-primary text-white text-center" id="game">
             <div class="container">
                 <div class="content-section-heading">
-                    <h2 class="text-secondary mb-0">Game</h2>
+                    <!-- <h2 class="text-secondary mb-0">Game</h2> -->
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -86,38 +104,36 @@
                             <i class="icon-screen-smartphone"></i>
                         </span>
                         <h4>
-                            <strong>Responsive</strong>
+                            <strong>Play the Penguin</strong>
                         </h4>
-                        <p class="text-faded mb-0">Looks great on any screen size!</p>
+                        <p class="text-faded mb-0">...</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3">
                             <i class="icon-pencil"></i>
                         </span>
                         <h4>
-                            <strong>Redesigned</strong>
+                            <strong>Kill Zombies</strong>
                         </h4>
-                        <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+                        <p class="text-faded mb-0">...</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3">
                             <i class="icon-like"></i>
                         </span>
                         <h4>
-                            <strong>Favorited</strong>
+                            <strong>Cure the Virus</strong>
                         </h4>
-                        <p class="text-faded mb-0">Millions of users
-                            <i class="fas fa-heart"></i>
-                            Start Bootstrap!</p>
+                        <p class="text-faded mb-0">...</p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3">
                             <i class="icon-mustache"></i>
                         </span>
                         <h4>
-                            <strong>Question</strong>
+                            <strong>Save the World</strong>
                         </h4>
-                        <p class="text-faded mb-0">I mustache you a question...</p>
+                        <p class="text-faded mb-0">...</p>
                     </div>
                 </div>
             </div>
@@ -131,7 +147,7 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h1>Peng (Pete) Xie</h1>
@@ -142,7 +158,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h1>Yung-Chu Chuang</h1>
@@ -153,7 +169,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h1>Jia Hao Yao</h1>
@@ -164,7 +180,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h1>Eunbin (May) Ko</h1>
@@ -175,7 +191,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h1>Michael Yuen</h1>
@@ -186,7 +202,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h1>Ho Lei (Ryan) Chou</h1>
@@ -194,6 +210,17 @@
                                 </span>
                             </span>
                             <img class="img-fluid" src="img/ryan.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <a class="portfolio-item">
+                            <span class="caption">
+                                <span class="caption-content">
+                                    <h1>James Wilson</h1>
+                                    <p class="mb-0">Audio Engineer</p>
+                                </span>
+                            </span>
+                            <img class="img-fluid" src="img/james.jpg" alt="">
                         </a>
                     </div>
                 </div>
